[gd_scene load_steps=17 format=3 uid="uid://7vicienpf4o5"]

[ext_resource type="Script" path="res://scripts/traps/fire/fire.gd" id="1_oyu4w"]
[ext_resource type="Texture2D" uid="uid://bgpc01aoqg0po" path="res://assets/traps/fire/on.png" id="2_fgdpm"]
[ext_resource type="Texture2D" uid="uid://bh0i8hec5sb68" path="res://assets/traps/fire/off.png" id="3_2hbgh"]
[ext_resource type="Texture2D" uid="uid://cvwsw1xioaxw4" path="res://assets/traps/fire/hit.png" id="4_8thwu"]
[ext_resource type="Script" path="res://scripts/fsm/finite_state_machine.gd" id="5_j5h3y"]
[ext_resource type="Script" path="res://scripts/traps/fire/state/fire_off_state.gd" id="6_qq3ds"]
[ext_resource type="Script" path="res://scripts/traps/fire/state/fire_hit_state.gd" id="7_4y36o"]
[ext_resource type="Script" path="res://scripts/traps/fire/state/fire_on_state.gd" id="8_uarfb"]

[sub_resource type="Animation" id="Animation_6yal7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_2hbgh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_0s6im"]
resource_name = "hit"
length = 0.200005
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_8thwu")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_1mdux"]
resource_name = "off"
length = 0.050005
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_2hbgh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ejen7"]
resource_name = "on"
length = 0.150005
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_fgdpm")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fuokp"]
_data = {
"RESET": SubResource("Animation_6yal7"),
"hit": SubResource("Animation_0s6im"),
"off": SubResource("Animation_1mdux"),
"on": SubResource("Animation_ejen7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_brn5f"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6c4u7"]
size = Vector2(16, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cpypu"]
size = Vector2(8, 13)

[node name="Fire" type="StaticBody2D"]
z_index = 2
collision_layer = 2
collision_mask = 0
script = ExtResource("1_oyu4w")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("3_2hbgh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fuokp")
}

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource("5_j5h3y")

[node name="Off" type="Node" parent="FiniteStateMachine"]
script = ExtResource("6_qq3ds")

[node name="Hit" type="Node" parent="FiniteStateMachine"]
script = ExtResource("7_4y36o")

[node name="On" type="Node" parent="FiniteStateMachine"]
script = ExtResource("8_uarfb")

[node name="Timer" type="Timer" parent="FiniteStateMachine/On"]
process_callback = 0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_brn5f")

[node name="StepArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StepArea"]
position = Vector2(0, -17)
shape = SubResource("RectangleShape2D_6c4u7")

[node name="FireArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="FireArea"]
position = Vector2(0, -23.5)
shape = SubResource("RectangleShape2D_cpypu")
disabled = true

[connection signal="timeout" from="FiniteStateMachine/On/Timer" to="FiniteStateMachine/On" method="_on_timer_timeout"]
[connection signal="body_entered" from="StepArea" to="." method="_on_step_area_body_entered"]
[connection signal="body_entered" from="FireArea" to="." method="_on_fire_area_body_entered"]
